@@ -168,7 +168,7 @@ function Promise(descriptor, fallback, valueOf) {
         if (descriptor[op])
             result = descriptor[op].apply(descriptor, args);
         else
-            result = fallback.apply(descriptor, arguments);
+            result = fallback.apply(descriptor, [op].concat(args));
         resolved = resolved || identity;
         return resolved(result);
     };
@@ -233,9 +233,8 @@ function reject(reason) {
         "when": function (rejected) {
             return rejected ? rejected(reason) : reject(reason);
         }
-    }, function fallback(op, resolved) {
-        resolved = resolved || identity;
-        return resolved(reject(reason));
+    }, function fallback(op) {
+        return reject(reason);
     }, function valueOf() {
         var rejection = create(reject.prototype);
         rejection.promiseRejected = true;
@@ -301,11 +300,9 @@ exports.def = def;
 function def(object) {
     return Promise({
         "isDef": function () {}
-    }, function fallback(op, resolved) {
-        var args = Array.prototype.slice.call(arguments, 2);
-        var result = send.apply(undefined, [object, op].concat(args));
-        resolved = resolved || identity;
-        return resolved(result);
+    }, function fallback(op) {
+        var args = Array.prototype.slice.call(arguments);
+        return send.apply(undefined, [object].concat(args));
     }, function valueOf() {
         return object.valueOf();
     });
